--- a/css/8.3 Media Query/practice.html
+++ b/css/8.3 Media Query/practice.html
@@ -6,14 +6,14 @@
     <title>Practice Media Queries</title>
     <style>
         div {
-            width: 500px;
-            height: 500px;
+            width: 250px;
+            height: 250px;
             background-color: black;
         }
-        @media (max-width: 500px) {
+        @media (min-width: 500px) {
             div {
-                width: 250px;
-                height: 250px;
+                width: 500px;
+                height: 500px;
                 background-color: gold;
             }         
         }
